# Marvel_Vs_Capcom

./: .cproject  .gitignore  .project  Boceto diseño inicial fase 1.txt  CMakeLists.txt  LICENSE  MCGame.cpp  README.md  client.sh  server.sh  setUp.sh
Debug/: makefile  marvel-vs-capcom  objects.mk  sources.mk
Debug/src/: .gitignore  subdir.mk
Debug/src/Characters/: subdir.mk
Debug/src/Client/: subdir.mk
Debug/src/MCGame/: subdir.mk
Debug/src/Spiderman/: subdir.mk
Debug/src/Texture/: subdir.mk
Debug/src/tools/: .gitignore
Debug/src/tools/FPSManager/: subdir.mk
Debug/src/tools/json/ConfigFileParser/: subdir.mk
Debug/src/tools/logger/: subdir.mk
config/: config.json  config_default.json
images/scripts/:    .crop.sh.swp  SpidermanNameScript.sh  WolverineNameScript.sh  crop.sh  name_script.sh  nameclean_script.sh
images/spiderman/spiderman_block/: LEER.txt
images/spiderman/spiderman_duck/: MVC2_SpiderMan_1png
images/spiderman/spiderman_walking_right/: MVC2_SpiderMan_8.png~HEAD
images/wolverine/wolverine_jumping_directional/: MVC2_Wolverine_2.png~HEAD
images/wolverine/wolverine_standing/: MVC2_Wolverine_14.png~HEAD
images/wolverine/wolverine_standing_right/: MVC2_Wolverine_3.png~HEAD  MVC2_Wolverine_6.png~HEAD
images/wolverine/wolverine_walking/: MVC2_Wolverine_14.png~HEAD  MVC2_Wolverine_4.png~HEAD
images/wolverine/wolverine_walking_right/: MVC2_Wolverine_5.png~HEAD
src/: Banner.cpp  Banner.h  Barra.cpp  Barra.h  Box.cpp  Box.h  Client.cpp  Client.h  ClientCursor.cpp  ClientCursor.h  ClientsThread.cpp  ClientsThread.h  Constants.h  EventHandler.cpp  EventHandler.h  InputManager.cpp  InputManager.h  InputTable.h  LTexture.cpp  LTexture.h  Layer.cpp  Layer.h  MCGame.cpp  MCGame.h  Music.cpp  Music.h  Parallax.cpp  Parallax.h  Player.cpp  Player.h  Renderizable.h  RoundBanner.cpp  RoundBanner.h  RoundCounter.cpp  RoundCounter.h  Server.cpp  Server.h  ServerCursor.cpp  ServerCursor.h  ServerThread.cpp  (+25 more)
src/Characters/: Character.cpp  Character.h  Spiderman.cpp  Spiderman.h  Wolverine.cpp  Wolverine.h  orientation_constants.h
src/CharactersClient/: CharacterClient.cpp  CharacterClient.h  IronManClient.cpp  IronManClient.h  IronmanClient.cpp  IronmanClient.h  ProjectileClient.cpp  ProjectileClient.h  ProjectileIronmanClient.cpp  ProjectileIronmanClient.h  ProjectileRyuClient.cpp  ProjectileRyuClient.h  ProjectileSpidermanClient.cpp  ProjectileSpidermanClient.h  ProjectileWolverineClient.cpp  ProjectileWolverineClient.h  RyuClient.cpp  RyuClient.h  SpidermanClient.cpp  SpidermanClient.h  WolverineClient.cpp  WolverineClient.h
src/CharactersServer/: CharacterServer.cpp  CharacterServer.h  IronManServer.cpp  IronManServer.h  Projectile.cpp  Projectile.h  RyuServer.cpp  RyuServer.h  SpidermanServer.cpp  SpidermanServer.h  WolverineServer.cpp  WolverineServer.h
src/CharactersServer/Characters/: CharacterServer.cpp  CharacterServer.h  IronmanServer.cpp  IronmanServer.h  RyuServer.cpp  RyuServer.h  SpidermanServer.cpp  SpidermanServer.h  WolverineServer.cpp  WolverineServer.h
src/CharactersServer/Projectiles/: ProjectileIronmanServer.cpp  ProjectileIronmanServer.h  ProjectileRyuServer.cpp  ProjectileRyuServer.h  ProjectileServer.cpp  ProjectileServer.h  ProjectileSpidermanServer.cpp  ProjectileSpidermanServer.h  ProjectileWolverineServer.cpp  ProjectileWolverineServer.h
src/Client/: Client.cpp  Client.h  ClientSocket.cpp  ClientSocket.h  NetworkManager.cpp  NetworkManager.h  TCPClient.cpp  TCPClient.h
src/Controls/: ArrowControls.cpp  ArrowControls.h  Controls.cpp  Controls.h  WASDControls.cpp  WASDControls.h
src/MCGame/: MCGame.cpp  MCGame.h
src/Menu/: Menu.cpp  Menu.h  MenuFourPlayers.cpp  MenuFourPlayers.h  MenuThreePlayers.cpp  MenuThreePlayers.h  MenuTwoPlayers.cpp  MenuTwoPlayers.h
src/Personajes/: Spiderman.cpp  Spiderman.h  Wolverine.cpp  Wolverine.h
src/Queue/: Node.cpp  Node.h  Queue.h
src/Spiderman/: Spiderman.cpp  Spiderman.h
src/Texture/: Texture.cpp  Texture.h
src/headers/: MCGame.h  Texture.h
src/tools/FPSManager/: FPSManager.cpp  FPSManager.h
src/tools/ImageLoader/: ImageLoader.cpp  ImageLoader.h
src/tools/json/ConfigFileParser/: ConfigFileParser.cpp  ConfigFileParser.h  config_default.json
src/tools/logger/: Logger.cpp  Logger.h
